...
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <EditText
            android:id="@+id/criticalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toStartOf="@+id/criticalUnit"
            app:layout_constraintStart_toStartOf="parent"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Čas oznámení: 00:00"
        app:layout_constraintTop_toBottomOf="@+id/notificationSwitch"></Button>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Uložit"
        app:layout_constraintBottom_toBottomOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>
