...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BagsActivity">

    <ListView
        android:id="@+id/bagList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="157dp"></ListView>
...
