<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/dateDay"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="DD"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/dateMonth"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="MM"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/dateDay"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/dateYear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="YYYY"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateMonth"
        app:layout_constraintTop_toTopOf="parent"></EditText>

</androidx.constraintlayout.widget.ConstraintLayout>