<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/decrementBtn"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:minWidth="0dp"
        android:text="-"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <EditText
        android:id="@+id/countInput"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:textAlignment="center"
        android:text="1"
        app:layout_constraintStart_toEndOf="@+id/decrementBtn"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <Button
        android:id="@+id/incrementBtn"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:minWidth="0dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/countInput"
        app:layout_constraintTop_toTopOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>